Suspend problems with Radeon PRO WX 3100
Background
Ever since getting this Dell Precision 3540 I've been having various ACPI and suspend issues. Despite this, for some length of time, approximately spanning across kernel versions 5.11.x and 5.13.x, there was a configuration that seemed to make it always go into deep power states, go to sleep properly, and wake up reliably. This configuration involved a few kernel commandline arguments:
- acpi_backlight=vendor
- initcall_blacklist=cnl_pinctrl_driver_init
- mem_sleep_default=deep
- nmi_watchdog=0
- pcie_aspm=force
- pcie_aspm.policy=powersave
Problem
Since somewhere around 5.14.x the issues have reappeared intermittently and from what I can tell most of the changes in the respective changelogs have been to amdgpu. Some version between 5.15.10 and 5.15.14 in particular broke my suspend completely. Now the laptop refuses to go to sleep at all and I am out of battery if I leave it closed overnight. dmesg shows lots of errors related to amdgpu, but to tell the truth it was never completely error free to begin with.
Miscellanea
I'm not sure if it's related to amdgpu, but /sys/power/mem_sleep no longer lists [deep] as an option. Oh, and the laptop will quite reliably freeze at boot with a black screen unless the AC power plug is connected, regardless of whether it is actually supplying power or not.
Hardware description:
- CPU: Intel(R) Core(TM) i7-8665U CPU @ 1.90GHz
- GPU: Intel Corporation WhiskeyLake-U GT2 [UHD Graphics 620], Advanced Micro Devices, Inc. [AMD/ATI] Lexa XT [Radeon PRO WX 3100]
- System Memory: 32GB
- Display(s): Laptop integrated monitor 1920x1080@60
- Type of Display Connection: eDP
System information:
- Distro name and Version: Fedora F35
- Kernel version: 5.15.16-200.fc35.x86_64
How to reproduce the issue:
Close the lid or otherwise trigger a suspend
Log files
Lid close occurs at 343.954894. Not sure exactly when lid open occurs, but it's before 363.750523